2025-03-19T01:05:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13936597673 # 598
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-19
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 484 877 / 498 891
* notice: next accum: outdated-unq outdated-all / unq all: 485 878 / 499 892
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-05] / [2025-03-18]

2025-03-18T01:05:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13913100706 # 597
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-18
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 483 876 / 497 890
* notice: next accum: outdated-unq outdated-all / unq all: 484 877 / 498 891
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-04] / [2025-03-17]

2025-03-17T01:07:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13889381252 # 596
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-17
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 482 875 / 496 889
* notice: next accum: outdated-unq outdated-all / unq all: 483 876 / 497 890
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-03] / [2025-03-16]

2025-03-16T01:09:53Z: