@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-19T01:05:53Z",
-  "count_outdated" : 878,
-  "uniques_outdated" : 485,
-  "count" : 892,
-  "uniques" : 499,
+  "timestamp" : "2025-03-20T01:04:36Z",
+  "count_outdated" : 879,
+  "uniques_outdated" : 486,
+  "count" : 893,
+  "uniques" : 500,
   "clones" : [
-    {
-      "timestamp": "2025-03-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-07T00:00:00Z",
       "count": 2,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-03-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
