@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2025-03-06T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-03-07T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -59,6 +54,11 @@
     },
     {
       "timestamp": "2025-03-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-19T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
