@@ -1,3 +1,12 @@
+2025-03-20T01:04:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13959778838 # 599
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-20
+* notice: last 14d: unq all: 5 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 485 878 / 499 892
+* notice: next accum: outdated-unq outdated-all / unq all: 486 879 / 500 893
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-03-06] / [2025-03-19]
+
 2025-03-19T01:05:53Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13936597673 # 598
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-19
